# ANDS

./: .gitignore  CHANGELOG.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TOOLS_TESTS.md  action.yml  ands.config.yaml  ands.json  pyproject.toml  verification_report.md
ands/: __init__.py  audit.py  ci.py  ci_engine.py  cli.py  config.py  migrate.py  models.py  policy_engine.py  registry.py  render.py  rosetta.py  scanner.py  schema_migrator.py  sign.py  swarm.py  ui.py  utils.py  validator.py
attestations/: README.md  self-attestation-template.md  third-party-attestation-template.md
deployment/: k8s-sidecar.yaml
docs/: 01-ands-definition.md  02-ands-scoring-rules.md  03-certification-levels.md  05-audit-artifacts.md  08-faq.md  09-signed-declarations.md  10-scanner-verification-mode.md  11-framework-integration.md  12-universal-standard.md  13-regulatory-alignment.md  14-configuration.md  15-schema-versioning.md  16-regulatory-mapping-v2.md  17-multisig-notarization.md  18-ci-dashboard.md  ANDS_HANDBOOK.md
examples/: ands.config.yaml  ands_gov_restricted.json  ands_legacy_ml.json  ands_local_llm.json  declaration_invalid.json  declaration_valid.json
policies/: eu_ai_act.yaml  iso_42001.yaml  nist_ai_rmf.yaml
spec/: ands.schema.json  well-known-ands.schema.json
tests/: README.md  test_ands_scan.py  test_audit.py  test_ci.py  test_config.py  test_multisig.py  test_rosetta.py  test_schema_validation.py  test_versioning.py
tools/: ands_audit_review.py  ands_badge.py  ands_bulk_scan.py  ands_ci.py  ands_config.py  ands_discover.py  (+20 more)
(+50 files in other folders)
